# UMBC-Data-Vis

./: HOW_IT_WORKS.md  README.md
_old/sandbox/: top_10_recipes_foodcom_fixed.csv
_old/sandbox/.ipynb_checkpoints/: top_10_recipes_foodcom_fixed-checkpoint.csv
_old/semantic_projection/: count_clusters.py  download_kaggle.py  embed_abstracts.py  export_web.py  name_clusters.py  project_and_cluster.py  text_umap_3d_v10.py
_old/semantic_projection/web/: app.js  index.html  style.css
_old/site/: app.py
data/: .gitignore  DESIGN_DECISIONS.md  EXPORT_FORMAT.md  README.md  clean.py  config.json  download.py  histogram.py  preview.py  pyproject.toml  pyproject.toml.bak  run.py
data-info/: bias.html  popularity.html  tempora_signal.html
data/pipeline/: PLAN.md  assign.py  category_metrics.py  cuisine_tags.py  cuisine_taxonomy.json  cuisines.txt  derive_taxonomy.py  embed.py  embed_config.json  encode_ordinal.py  export.py  metrics.py  numeric_encode.py  process_ratings.py  process_recipe_metrics.py  project.py  projection_weights.json  tag_encode.py
data/pipeline/configs/: avg_rating.json  cuisines.txt  embed_config.json  meal_types.txt  minutes.json  n_ingredients.json  n_ratings.json  n_steps.json  projection_weights.json  submitted.json
sandbox/: ProposalExtraCred.ipynb  README.md  pyproject.toml
sandbox/.ipynb_checkpoints/: ProposalExtraCred-checkpoint.ipynb  top_10_recipes_foodcom-checkpoint.csv
site/: .gitignore  CHARTS.md  README.md  app.js  app.py  index.html  requirements.txt  story.json  style.css
