[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "dracopy>=2.0.0",
    "kagglehub",
    "pandas",
    "plotly>=6.7.0",
    "pymorton>=1.0.5",
    "sentence-transformers",
    "torch",
    "umap-learn",
]

[tool.uv]
index-strategy = "unsafe-best-match"

# Windows: CUDA 12.1 wheel from the PyTorch index.
# macOS / Linux: CPU-only wheel from PyPI.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
name = "pytorch-cu121"
explicit = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
name = "pypi"
default = true
